# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description       = "Internal test utilities for google-cloud-rust crates"
edition.workspace = true
name              = "google-cloud-test-utils"
publish           = false
version           = "0.0.0"

[dependencies]
anyhow.workspace                             = true
once_cell.workspace                          = true
opentelemetry-semantic-conventions.workspace = true
rand                                         = { workspace = true, features = ["thread_rng"] }
tracing.workspace                            = true
tracing-subscriber                           = { workspace = true, features = ["registry", "std"] }
uuid                                         = { workspace = true, features = ["std", "v4"] }

[dev-dependencies]
scoped-env.workspace  = true
serial_test.workspace = true
tokio                 = { workspace = true, features = ["macros", "rt-multi-thread"] }
