# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description = "Google Cloud Client Libraries for Rust - Well Known Types"
name        = "google-cloud-wkt"
version     = "0.1.0"
# Inherit other attributes from the workspace.
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

[features]
chrono = ["dep:chrono"]
time   = []

[dependencies]
bytes      = { version = "1.10.0", features = ["serde"] }
chrono     = { version = "0.4.39", optional = true }
serde      = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1"
serde_with = { version = "3.12.0", default-features = false, features = ["base64", "macros", "std"] }
thiserror  = "2"
time       = { version = "0.3.36", features = ["formatting", "parsing"] }

[dev-dependencies]
bytes     = { version = "1.10.0", features = ["serde"] }
test-case = "3.3.1"
wkt       = { path = ".", package = "google-cloud-wkt", features = ["chrono", "time"] }
