# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description = "Google Cloud Client Libraries for Rust - Well Known Types"
name        = "google-cloud-wkt"
version     = "0.5.3"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# Generate documentation for some of the optional conversions. It is too early
# for `prost`.
features = ["chrono", "time"]

[features]
chrono = ["dep:chrono"]
time   = []
# DO NOT USE: this allows us to detect semver changes in types used in the
# implementation of client libraries. None of the types or functions gated
# by this feature are intended for general use. We do not plan to document these
# features and offer no guarantees on their stability.
_internal-semver = []

[dependencies]
base64.workspace     = true
bytes.workspace      = true
chrono               = { workspace = true, optional = true }
serde.workspace      = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace  = true
time                 = { workspace = true, features = ["formatting", "parsing"] }
url.workspace        = true

[dev-dependencies]
anyhow.workspace    = true
test-case.workspace = true
time                = { workspace = true, features = ["formatting", "macros", "parsing"] }
wkt                 = { path = ".", package = "google-cloud-wkt", features = ["chrono", "time"] }
common              = { path = "tests/common" }
