# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description       = "Integration tests for auto populated fields."
name              = "integration-tests-auto-populated"
publish           = false
version           = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
# These are normally disabled because they run against production.
run-integration-tests = []
# Logging enables more verbose output for the tests.
log-integration-tests = []

[dependencies]

[dev-dependencies]
anyhow.workspace           = true
mockall.workspace          = true
tokio.workspace            = true
google-cloud-gax.workspace = true
google-cloud-storage       = { workspace = true, features = ["default"] }
tracing.workspace          = true

[lints]
workspace = true
